# chatbot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/: commands.md
docs/adrs/: 001_python_as_implementation_language.md  002_deterministic_first_pipeline_ordering.md  003_async_first_architecture.md  004_litellm_for_llm_abstraction.md  005_fail_closed_pipeline_error_handling.md  006_sliding_window_over_llm_summarization.md  007_swappable_prompt_injection_detector.md  008_test_strategy_mocked_unit_gated_integration.md  009_sentence_transformers_as_optional_dependency.md  010_security_threat_model.md  011_rest_sse_api_transport.md  012_in_memory_session_storage.md  013_embedded_scenario_configs.md  014_markdown_prompt_format.md  015_go_nextjs_monorepo.md
docs/conventions/: code.md
docs/superpowers/plans/: 2026-03-21-conversation-manager.md
docs/superpowers/specs/: 2026-03-21-conversation-manager-design.md  2026-03-22-go-nextjs-architecture-design.md  2026-03-22-system-prompt-design.md
plans/: 001-guardrailed-chatbot.md  002-nextjs-frontend.md
scenarios/: brand_marketing.yaml  financial_advisor.yaml  insurance_claims.yaml
server/: go.mod
src/chatbot/: __main__.py  config.py
tests/unit/: test_config.py
web/: next.config.ts  package-lock.json  package.json
web/__tests__/: ChatInput.test.tsx  ChatMessage.test.tsx  ScenarioCard.test.tsx  StreamingMessage.test.tsx  useChat.test.ts
web/app/: error.tsx  layout.tsx  page.tsx
web/components/: ChatInput.tsx  ChatMessage.tsx  ScenarioCard.tsx  StreamingMessage.tsx
(+53 files in other folders)
