[project]
name = "chatbot"
version = "0.1.0"
description = "LLM guardrails testbed — evaluates guardrail techniques for regulated and brand-sensitive contexts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
